# SkillSync

./: .gitignore  README.md  SkillSync.sln  SkillSync.vcxproj  SkillSync.vcxproj.filters  globals.h  main.cpp
features/: features.h
features/movement/: movement.cpp  movement.h
src/: CMakeLists.txt
src/DLL/: CMakeLists.txt  globals.cpp
src/DLL/features/: features.cpp
src/DLL/features/movement/: movement.h
src/Injector/: CMakeLists.txt  injector.cpp  injector.h  injector_main.cpp
src/features/: features.cpp
